client/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: cache-me-if-you-can-genai
  labels:
    app: client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ghcr.io/aet-devops25/team-cache-me-if-you-can/client:amd64-latest
          ports:
            - containerPort: 3000
