client/k8s/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: cache-me-if-you-can-client
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
